Added RedHat as DjangoGirls sponsor.

--- a/static/jade/index.jade
+++ b/static/jade/index.jade
@@ -76,3 +76,9 @@ block viewport
         .sponsor
           a.sponsor-placeholder(href=pageUrl("about/sponsorship.html")).
             Become our partner!
+
+      .djangogirls
+        h3 DjangoGirls workshop sponsor
+        .sponsor
+          a.sponsor-redhat(href="http://www.redhat.com/en/global/czech-republic")
+            img(src=pageUrl("/static/images/sponsors/redhat.png"))
