Added RedHat logo and Valentinas's avatar.

--- a/static/jade/index.jade
+++ b/static/jade/index.jade
@@ -54,7 +54,7 @@ block viewport
         h3 Platinum sponsor
         .sponsor
           a.sponsor-skypicker(href="https://skypicker.com")
-            img(src="https://cz.skypicker.com/images/about/skypicker-logo.png")
+            img(src=pageUrl("/static/images/sponsors/skypicker.png"))
 
       .gold
         h3 Gold sponsors
