--- a/static/scss/pycon/_sponsors.scss
+++ b/static/scss/pycon/_sponsors.scss
@@ -70,7 +70,11 @@
 
   .sponsor-redhat {
     position: relative;
-    top: -40px;
+    top: -30px;
     z-index: -1;
+
+    img {
+      width: 90%;
+    }
   }
 }
