--- a/static/jade/components/navbar.jade
+++ b/static/jade/components/navbar.jade
@@ -6,8 +6,8 @@ header#top
     ul.nav.navbar-nav
       li.about
         a(href=pageUrl("#")) About
-      //- li.getting-here
-      //-   a(href=pageUrl("")) Getting here
+      li.getting-here
+        a(href=pageUrl("getting-here/")) Getting here
       li.tickets
         a(href=pageUrl("about/tickets.html"))
           | Tickets
