--- a/static/jade/getting-here/index.jade
+++ b/static/jade/getting-here/index.jade
@@ -15,7 +15,7 @@ block viewport
     h2 Travelling
     
     p.
-      How we told you already, that Brno is situated in the heart in Europe?
+      Have we told you already, that Brno is situated in the heart in Europe?
       That's right. Brno is the centroid of the whole continent, the cosmopolis
       of culture, technology, education and mostly… jokes.
     
