Added Team page.

--- a/static/jade/components/footer.jade
+++ b/static/jade/components/footer.jade
@@ -5,8 +5,8 @@ footer.site-footer
         li.section
           a.nav-title(href=pageUrl("#")) About
           ul
-            //- li
-            //-   a(href="/") Team
+            li
+              a(href=pageUrl("about/team.html")) Team
             //- li
             //-   a(href="/") Event
             li
