--- a/static/scss/_variables.scss
+++ b/static/scss/_variables.scss
@@ -29,8 +29,9 @@ $navbar-bg: rgba(255, 255, 255, 0.97);
 // Dimensions
 
 $navbar-height: 60px;
-$footer-height: 300px;
-$offcanvas-navbar-width: 220px;
+$footer-height: 320px;
+$offcanvas-navbar-width: 230px;
+$images-size: 96px;
 
 // Theme overrides
 
