--- a/static/scss/pyconcz.scss
+++ b/static/scss/pyconcz.scss
@@ -14,6 +14,7 @@
 @import "pycon/coc";
 @import "pycon/map";
 @import "pycon/talks";
+@import "pycon/team";
 @import "pycon/sponsors";
 
 @import url(https://fonts.googleapis.com/css?family=Amatic+SC:700);
