--- a/static/jade/about/team.jade
+++ b/static/jade/about/team.jade
@@ -9,7 +9,7 @@ block viewport
     
     p.lead.
       PyCon is community event. There are more than 30 people on our Slack channel and
-      even more volunteers helped us by sending PR on #[a(href="https://github.com/pyvec/cz.pycon.org-2015") github]. If you
+      even more volunteers helped us by sending PR on #[a(href="https://github.com/pyvec/cz.pycon.org-2015") GitHub]. If you
       drew the organization structure of PyCon CZ team,
       #[strong you — the attendee] would be at the top. The incredible amount of
       volunteers would follow. There's a little or no difference between organizer
