--- a/static/jade/about/team.jade
+++ b/static/jade/about/team.jade
@@ -8,14 +8,14 @@ block viewport
     h1 Who is behind this?
     
     p.lead.
-      PyCon is community event. There are more than 30 people on our Slack channel and
-      even more volunteers helped us by sending PR on #[a(href="https://github.com/pyvec/cz.pycon.org-2015") GitHub]. If you
-      drew the organization structure of PyCon CZ team,
+      PyCon is a community event. There are more than 30 people on our Slack
+      channel and even more volunteers helped us by sending PR on #[a(href="https://github.com/pyvec/cz.pycon.org-2015") GitHub].
+      If you drew the organization structure of the PyCon CZ team,
       #[strong you — the attendee] would be at the top. The incredible amount of
-      volunteers would follow. There's a little or no difference between organizer
-      and volunteer, because we all do it in our free time without any claim for wage.
-      Below there's a list of our core team members.
-      
+      volunteers would follow. There's little or no difference between organizers
+      and volunteers, because we all do it in our free time without any claim
+      for wage. Below is a list of our core team members.
+
     p.call-to-action.
       We are here for #[strong you].
     
