Fixed english grammer and added Bara, our proofreader.

--- a/static/jade/about/team.jade
+++ b/static/jade/about/team.jade
@@ -85,6 +85,12 @@ block viewport
       p.name
         a(href="https://twitter.com/kejbaly2") Chris Ward
       p.description Sponsors
+      
+    .team-member
+      img(src='https://pbs.twimg.com/profile_images/584466697236705281/x70KfVRq.jpg', alt='')
+      p.name
+        a(href="https://twitter.com/BaraDrb") Bára Drbohlavová
+      p.description English proofreading
 
   .container
     p.call-to-action.
