--- a/static/jade/getting-here/index.jade
+++ b/static/jade/getting-here/index.jade
@@ -15,9 +15,9 @@ block viewport
     h2 Travelling
     
     p.
-      Have we told you already, that Brno is situated in the heart in Europe?
+      Have we already told you that Brno is situated in the heart of Europe?
       That's right. Brno is the centroid of the whole continent, the cosmopolis
-      of culture, technology, education and mostly… jokes.
+      of culture, technology, education, and mostly… jokes.
     
     h3 By plane
     
@@ -36,22 +36,24 @@ block viewport
     h3 By train or bus
     
     p.
-      We love trains! The most ecological mass transport. Czech republic has
-      also very dense railway network. Buses depart very often to most big cities
-      in Czech republic. And Brno is a huge city, so you have no problem at all.
-      #[strong Bonus:] Brno is only one stop away from Prague when travelling by Bus.
-    
+      We love trains! The most ecological means of transport. The Czech Republic
+      has  a very dense railway network. Buses depart very often to  and from
+      most big cities in the Czech Republic. And Brno is a huge city, so you
+      will have no problem getting here at all. #[strong Bonus:] Brno is only one stop
+      away from Prague when travelling by bus.
+
     p.
       Use #[a(href="http://jizdnirady.idnes.cz/vlakyautobusy/spojeni/") jizdnirady.cz]
-      when looking for a train or bus. If the page loads in Czech, just find "English"
-      on page. It is localized, but using some kind of obscure mechanism.
+      when looking for a train or bus. If the page loads in Czech, just find
+        "English" on the page. It is localized, but uses some kind of
+        an obscure mechanism.
     
     h3 By car
     
     p.
-      As we mentioned before, Brno is a halfway between Prague and Vienna.
-      It means, you can use highway #[D1] when travelling from Prague (enjoy it,
-      it's real Czech experience). When travelling from Vienna by car, you have
-      several #[a(href="https://www.google.cz/maps/dir/Vienna,+Austria/Brno/@48.6934015,16.057494,9z/data=!3m1!4b1!4m14!4m13!1m5!1m1!1s0x476d079e5136ca9f:0xfdc2e58a51a25b46!2m2!1d16.3738189!2d48.2081743!1m5!1m1!1s0x4712943ac03f5111:0x400af0f6614b1b0!2m2!1d16.6068371!2d49.1950602!3e0") options].
-      The shortest path is via Poysdorf and Mikulov, but you can also go
-      to Reinthal, Břeclav and then connect to highway #[D2].
+      As we mentioned before, Brno is halfway between Prague and Vienna. It
+      means that you can use highway #[strong D1] when travelling from Prague (enjoy it,
+      it's a real Czech experience). When travelling from Vienna by car, you
+      have several #[a(href="https://www.google.cz/maps/dir/Vienna,+Austria/Brno/@48.6934015,16.057494,9z/data=!3m1!4b1!4m14!4m13!1m5!1m1!1s0x476d079e5136ca9f:0xfdc2e58a51a25b46!2m2!1d16.3738189!2d48.2081743!1m5!1m1!1s0x4712943ac03f5111:0x400af0f6614b1b0!2m2!1d16.6068371!2d49.1950602!3e0") options].
+      The shortest path is via Poysdorf and Mikulov, but
+      you can also go to Reinthal, Břeclav and then connect to the highway #[strong D2].
