Fixed typo on index page.

--- a/static/jade/index.jade
+++ b/static/jade/index.jade
@@ -31,7 +31,7 @@ block viewport
         h2 Talks
         .date Saturday 14th
         p.
-          #[strong One] day, #[strong two] parallel tracks, #[strong two] kenotes
+          #[strong One] day, #[strong two] parallel tracks, #[strong two] keynotes
           and #[strong ten] awesome talks. Community, web, hardware, science, devops and more.
       
       .program-item
