--- a/static/scss/pycon/_talks.scss
+++ b/static/scss/pycon/_talks.scss
@@ -198,6 +198,16 @@ $commit-line-size: 10px;
   h3 {
     margin-bottom: 0;
   }
+  .requirements {
+    h4 {
+      font-weight: normal;
+      margin-bottom: 0;
+    }
+    & > ul, & > ul > li > p {
+      margin-top: 0;
+      margin-bottom: 0;
+    }
+  }
 }
 
 .social {
@@ -225,5 +235,9 @@ $commit-line-size: 10px;
     @media (min-width: $screen-xs) {
       margin-left: 0;
     }
+  }
+
+  .workshop small+& {
+     margin-left: 1ex;
   }
 }
