Added twitter references.

--- a/static/jade/about/tickets.jade
+++ b/static/jade/about/tickets.jade
@@ -9,6 +9,8 @@ block viewport
       |  are now open. We have rates for individuals, corporate
       |  attendees and also for students. It's simple: We want you all to
       |  attend the first year edition of #[strong PyCon CZ].
+    
+    include ../components/twitter
 
     tito-widget(event="pyvec/pycon-cz-2015")
 
