--- a/static/jade/index.jade
+++ b/static/jade/index.jade
@@ -46,6 +46,10 @@ block viewport
       p.lead #[a(href=pageUrl("about/tickets.html")) Get your ticket] now and be part of the first PyCon CZ!
       .tito
         tito-widget(event="pyvec/pycon-cz-2015")
+    
+      h2 What people think about PyCon CZ?
+      
+      include components/twitter
   
     .sponsors
       h2 Our sponsors
