--- a/static/scss/pyconcz.scss
+++ b/static/scss/pyconcz.scss
@@ -10,6 +10,8 @@
 
 @import "pycon/navbar";
 @import "pycon/footer";
+@import "pycon/twitter";
+
 @import "pycon/home";
 @import "pycon/coc";
 @import "pycon/map";
