Added more info whats included in tickets.

--- a/static/jade/about/tickets.jade
+++ b/static/jade/about/tickets.jade
@@ -15,11 +15,19 @@ block viewport
     tito-widget(event="pyvec/pycon-cz-2015")
 
     h2 What's included in ticket price
+    
+    ul.ticket-overview
+      li #[span.number 2] days of conference
+      li #[span.number 2] tracks of talks
+      li #[span.number 14] talks
+      li #[span.number 2] delicious lunches
+      li #[span.number 4+] finest coffee with czech cakes
+      li #[span.number &infin;] pure awesomeness
 
     ul.ticket-features
-      li all #[strong two days] of the event - talks, sprints and workshops
+      li all talks, sprints and workshops during the #[strong two days] of the event
       li lunch and refreshments on both days
-      li delicious #[strong coffee] with awesome #[strong Czech cakes] during breaks
+      li finest #[strong coffee] with awesome #[strong czech cakes] during breaks
       li t-shirt, full bag of conference swag and gifts
 
     p.
