--- a/static/scss/pyconcz.scss
+++ b/static/scss/pyconcz.scss
@@ -17,6 +17,7 @@
 @import "pycon/map";
 @import "pycon/talks";
 @import "pycon/team";
+@import "pycon/tickets";
 @import "pycon/sponsors";
 
 @import url(https://fonts.googleapis.com/css?family=Amatic+SC:700);
