--- a/static/jade/components/twitter.jade
+++ b/static/jade/components/twitter.jade
@@ -1,11 +1,3 @@
-//- blockquote.twitter-tweet(lang="en")
-//-   p(lang="en", dir="ltr")
-//-     a(href="https://twitter.com/pyconcz") @pyconcz
-//-     |  I like it already... Good job!
-//-   
-//-   &mdash; Oskar Hollmann (@OskarHollmann) 
-//-   a(href="https://twitter.com/OskarHollmann/status/639469219105652737") September 3, 2015
-
 .twitter-list
   .twitter-content
     blockquote.twitter-tweet(lang="en")
@@ -26,5 +18,16 @@
 
       | &mdash; Ola Sitarska (@olasitarska)
       a(href="https://twitter.com/olasitarska/status/654705632327548928") October 15, 2015
- 
+
+//- We need one more tweet to keep grid layout
+//- .twitter-list
+//-   .twitter-content
+//-     blockquote.twitter-tweet(lang="en")
+//-       p(lang="en", dir="ltr").
+//-         Just bought a ticket for #[a(href="https://twitter.com/hashtag/pyconcz?src=hash") #pyconcz]
+//-         #[a(href="https://t.co/w6NZ6CdCQ5") https:\/\/t.co\/w6NZ6CdCQ5] The list
+//-         of talks looks really interesting.
+//-       
+//-       | &mdash; Jirka Vejrazka (@JirkaV) #[a(href="https://twitter.com/JirkaV/status/654931137463197696") October 16, 2015]
+
 script(async, src="//platform.twitter.com/widgets.js", charset="utf-8")
