--- a/static/jade/getting-here/index.jade
+++ b/static/jade/getting-here/index.jade
@@ -2,6 +2,7 @@ extends ../base
 
 block vars
   - var pageClass = "page-getting-here"
+  - var activePage = "getting-here"
 
 block viewport
   .container
