--- a/static/jade/workshops/index.jade
+++ b/static/jade/workshops/index.jade
@@ -29,6 +29,7 @@ mixin talk(workshop)
 
 block vars
   - var pageClass = "page-workshops"
+  - var activePage = "workshops"
 
 block viewport
   .container
