Fixed margin aroung headers.

--- a/static/jade/talks/index.jade
+++ b/static/jade/talks/index.jade
@@ -25,13 +25,23 @@ block viewport
     h1 Talks &amp; Keynotes
     
     .event-full.general
+      h2.title Registration opens
+      .talk-description
+        p.
+          Grab your lanyard, swag bag and cofee. #[br]
+          Meet our sponsors and get ready for a day full of awesome talks!
+      
+      .commit.empty.first
+        .dot
+
+    .event-full.general
       h2.title The grand opening
       .talk-description
         p.
           Welcome to the first PyCon CZ. #[br]
-          Meet our sponsors and get ready for a day full awesome talks!
+          Very short introduction.
       
-      .commit.empty.first
+      .commit.empty
         .dot
     
     .event-full
