Added inuits as silver sponsors.

--- a/static/jade/index.jade
+++ b/static/jade/index.jade
@@ -78,8 +78,11 @@ block viewport
           a.sponsor-pycharm(href="https://www.jetbrains.com/pycharm/")
             img(src=pageUrl("/static/images/sponsors/pycharm.png"))
         .sponsor
-          a.sponsor-placeholder(href=pageUrl("about/sponsorship.html")).
-            Become our partner!
+          a.sponsor-inuits(href="https://inuits.eu")
+            img(src=pageUrl("/static/images/sponsors/inuits.png"))
+        
+      a.alone.sponsor-placeholder(href=pageUrl("about/sponsorship.html")).
+        Become our partner!
 
       .djangogirls
         h3 DjangoGirls workshop sponsor
