Added more referral tweets.

--- a/static/jade/components/twitter.jade
+++ b/static/jade/components/twitter.jade
@@ -19,15 +19,21 @@
       | &mdash; Ola Sitarska (@olasitarska)
       a(href="https://twitter.com/olasitarska/status/654705632327548928") October 15, 2015
 
-//- We need one more tweet to keep grid layout
-//- .twitter-list
-//-   .twitter-content
-//-     blockquote.twitter-tweet(lang="en")
-//-       p(lang="en", dir="ltr").
-//-         Just bought a ticket for #[a(href="https://twitter.com/hashtag/pyconcz?src=hash") #pyconcz]
-//-         #[a(href="https://t.co/w6NZ6CdCQ5") https:\/\/t.co\/w6NZ6CdCQ5] The list
-//-         of talks looks really interesting.
-//-       
-//-       | &mdash; Jirka Vejrazka (@JirkaV) #[a(href="https://twitter.com/JirkaV/status/654931137463197696") October 16, 2015]
+.twitter-list
+  .twitter-content
+    blockquote.twitter-tweet(lang="en")
+      p(lang="en", dir="ltr").
+        Just bought a ticket for #[a(href="https://twitter.com/hashtag/pyconcz?src=hash") #pyconcz]
+        #[a(href="https://t.co/w6NZ6CdCQ5") https:\/\/t.co\/w6NZ6CdCQ5] The list
+        of talks looks really interesting.
+      
+      | &mdash; Jirka Vejrazka (@JirkaV) #[a(href="https://twitter.com/JirkaV/status/654931137463197696") October 16, 2015]
+
+  .twitter-content
+    blockquote.twitter-tweet(lang="en")
+      p(lang="en", dir="ltr").
+        I just registered for PyCon CZ 2015 #[a(href="https://t.co/7CKwOXBi0D") https:\/\/t.co\/7CKwOXBi0D]
+        See you all there! :)
+      | &mdash; Honza Král (@HonzaKral) #[a(href="https://twitter.com/HonzaKral/status/654705298842628096") October 15, 2015]
 
 script(async, src="//platform.twitter.com/widgets.js", charset="utf-8")
