Added another awesome tweet.

--- a/static/jade/components/twitter.jade
+++ b/static/jade/components/twitter.jade
@@ -36,4 +36,13 @@
         See you all there! :)
       | &mdash; Honza Král (@HonzaKral) #[a(href="https://twitter.com/HonzaKral/status/654705298842628096") October 15, 2015]
 
+.twitter-list
+  .twitter-content
+    blockquote.twitter-tweet(lang="en")
+      p(lang="en", dir="ltr").
+        Oh man, #[a(href="https://twitter.com/pyconcz") @pyconcz] looks
+        promising - Czech, Python, great talks, affordable tickets, good beer
+        - what more can a developer ask for?
+      | &mdash; Žan Anderle (@z_anderle) #[a(href="https://twitter.com/z_anderle/status/656168108080668673") October 19, 2015]
+
 script(async, src="//platform.twitter.com/widgets.js", charset="utf-8")
