--- a/static/jade/about/tickets.jade
+++ b/static/jade/about/tickets.jade
@@ -14,24 +14,24 @@ block viewport
 
     tito-widget(event="pyvec/pycon-cz-2015")
 
-    h2 What's included in ticket price
+    h2 What's included in the ticket price
     
     ul.ticket-overview
       li #[span.number 2] days of conference
       li #[span.number 2] tracks of talks
       li #[span.number 14] talks
       li #[span.number 2] delicious lunches
-      li #[span.number 4+] finest coffee with czech cakes
+      li #[span.number 4+] finest coffee with Czech cakes
       li #[span.number &infin;] pure awesomeness
 
     ul.ticket-features
       li all talks, sprints and workshops during the #[strong two days] of the event
       li lunch and refreshments on both days
-      li finest #[strong coffee] with awesome #[strong czech cakes] during breaks
-      li t-shirt, full bag of conference swag and gifts
+      li the finest #[strong coffee] with awesome #[strong Czech cakes] during breaks
+      li a t-shirt and a bag full of conference swag and gifts
 
     p.
-      Accomodation and travel costs are not covered. However, we'll try to
+      Accommodation and travel costs are not covered. However, we'll try to
       find you the best hotel deals in Brno.
 
     h2 What ticket is the right for me?
@@ -50,7 +50,7 @@ block viewport
 
     p.
       This is a non-profit event run by volunteers and driven by the community.
-      Event is organized with help of Czech Python/Django community
+      The event is organized with the help of Czech Python/Django community
       – #[a(href="http://pyvec.org") Pyvec].
     
     p.
