--- a/static/jade/about/sponsorship.jade
+++ b/static/jade/about/sponsorship.jade
@@ -15,7 +15,7 @@ block viewport
       where Pythonistas can get together and work on their open source projects.
 
     p.
-      This year is the first edition of PyCon CZ, and we look forward
+      This year is the first edition of PyCon CZ, and we are looking forward
       to bringing the tradition of diverse and insightful speakers, top-quality
       venues, and a great atmosphere to the Czech Republic. Regional PyCons are
       well-known for attracting developers, sysadmins, writers, designers, and
@@ -23,7 +23,7 @@ block viewport
 
     p.
       These packages are recommendations for your company or organization. If
-      you would like to contribute a different amount or alternative sponsorship
+      you would like to contribute a different amount or an alternative sponsorship
       format, please let us know and we’ll be happy to discuss custom packages.
 
     h2 Sponsorship Packages
@@ -36,7 +36,7 @@ block viewport
           li Full width logo on the event website
           li 3 tickets
           li Display unlimited promotional (“Swag”) items
-          li Own booth in venue hall
+          li Your own booth in the venue hall
           li Address audience during a sponsorship lightning talk (5 minutes)
           li Space for copy in welcome/goodbye emails to attendees
 
@@ -47,7 +47,7 @@ block viewport
           li Large logo on the event website
           li 2 tickets
           li Physical logo at the event (eg. banners, badge, stickers, etc)
-          li Own booth in venue hall
+          li Your own booth in the venue hall
           li Sponsorship branding, one of the following
             ul
               li Name the lunch
